# AI-Hackthon

./: .env  .env.example  .gitattributes  .gitignore  API_README.md  AzuriteConfig  CORS_FIX.md  GOOGLE_MAPS_SETUP.md  GROQ_CONFIG_README.md  Police_Department_Incident_Reports__2018_to_Present_20250621.csv  README.md  SETUP.md  TRANSIT_README.md  __azurite_db_table__.json  agentic-weather.js  app.py  claude_analysis.md  data.ipynb  demo_enhanced_routes.py  enhanced_route_finder.py  example_groq_usage.py  food_agent_client.py  google_maps_router.py  letta_client.py  navlife_gradio_app.py  package-lock.json  package.json  private_keys.json  pyproject.toml  report.md  requirements.txt  road_aware_router.py  route_plan.json  run_api.py  safe_route_finder.py  safety_analysis.json  safety_routes.json  sample_incident_data.csv  server.js  test-food-finder.ts  (+13 more)
agents/: foodfinder.ts  weatheragent.ts
food-discovery-backend/: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
food-discovery-backend/src/: index.ts
food-discovery-frontend/: 404.html  app.js  index.html  server.js
navlife-app/: App.js  App.tsx  README.md  package-lock.json  package.json  tsconfig.json
navlife-app/api/: foodApi.js  safetyApi.js  weatherApi.js
navlife-app/screens/: FoodScreen.tsx  SafetyScreen.tsx  TransportScreen.tsx  WeatherScreen.tsx
navlife-react/: CONVERSION_SUMMARY.md  README.md  package-lock.json  package.json  start.sh
navlife-react/backend/: app.py
navlife-venv/: pyvenv.cfg
src/: claude_analysis.md  report.md  route_optimization.md  sfo_bart_schedule.csv  sfo_bus_schedule.csv  transit_analysis.md  transit_plan.md
templates/: index.html
tools/: places.ts
types/: letta.d.ts
(+51 files in other folders)
